<resources>
    <string name="app_name">Tasks</string>
    <string name="task_list">Task list</string>
    <string name="calendar">Calendar</string>
    <string name="stats">Stats</string>
    <string name="date_picker_description">Date picker</string>
    <string name="no_date_selected">No date</string>
    <string name="time_picker_description">Time picker</string>
    <string name="task_name_prompt">Enter a task name</string>
    <string name="add_task">add task</string>
    <string name="edit_task">edit task</string>
    <string name="priority">priority</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button_description">Edit task</string>
    <string name="add_task_fab">add task</string>
    <string name="edit_prompt">Edit task name</string>
    <string name="sort_by_priority_chip">Most important</string>
    <string name="sort_by_deadline_chip">Closest deadlines</string>
    <string name="sort_by_id_chip">By ID</string>
    <string name="visibility_toggle_description">toggle list visibility</string>
    <string name="modify_task_fab">Modify task</string>
    <string name="channel_name">Task reminders</string>
    <string name="channel_description">Notifications for upcoming tasks with deadlines</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_by_deadline">Sort by deadline</string>
    <string name="show_completed">Show completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>